--- a/index.html
+++ b/index.html
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Kamal Ch&ra - Happy Diwali</title>
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
-<!-- partial:index.partial.html -->
-<html><head>
-<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-<meta content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
-<title>Happy Diwali</title>
+<body>
+  <!-- partial:index.partial.html -->
+  <html>
+
+  <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no"
+      name="viewport">
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+
+    <title>Happy Diwali</title>
     <audio type="audio/mpeg" controls="none" id="audio1" src="http://santhosh.comxa.com/dsm/fire.mp3"></audio>
-    
 
-  
-</script>
-</head>
-<body>
+
+
+    </script>
+  </head>
+
+  <body>
     <div class="container-fluid">
-        <h1 class="red-text text-center">Happy Diwali</h1>
-        <h2 class="text-center margin-left">-By Kamal Chandra</h2>
-      <center><span>click on screen</span>  </center>
-    </div> 
+      <h1 class="red-text text-center">Happy Diwali
+       <span style="font-size: 30px; color: gold;">-By Kamal Chandra</span></h1>
+      <center><span>click on screen</span> </center>
+    </div>
 
-<footer class="footer footer-inverse" style=" margin-bottom: 0;">
+    <footer class="footer footer-inverse" style=" margin-bottom: 0;">
       <div class="container">
         <!-- Start of SimpleHitCounter Code -->
-        
-        <!-- End of SimpleHitCounter Code -->        
+
+        <!-- End of SimpleHitCounter Code -->
       </div>
-</footer>
-</body></html>
-<!-- partial -->
-  <script src='https://code.jquery.com/jquery-2.1.0.min.js'></script><script  src="./script.js"></script>
+    </footer>
+  </body>
+
+  </html>
+  <!-- partial -->
+  <script src='https://code.jquery.com/jquery-2.1.0.min.js'></script>
+  <script src="./script.js"></script>
 
 </body>
+
 </html>
