--- a/index.html
+++ b/index.html
@@ -1,107 +1,42 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Kamal Ch&ra - Happy Diwali</title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
-.red-text {
-  font-family: Pacifico;
-  color: red;
-  font-size: 150px;
-}
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<html><head>
+<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+<meta content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
-center {
-  font-size: large;
-  margin-top: 60px;
-}
+<title>Happy Diwali</title>
+    <audio type="audio/mpeg" controls="none" id="audio1" src="http://santhosh.comxa.com/dsm/fire.mp3"></audio>
+    
 
-h2 {
-  margin-left: 100vh;
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-image: url("/a.jpg");
-}
-
-ul, li {
-  text-indent: 0;
-  text-decoration: none;
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  border: 0;
-}
-
-body {
-  background-color: #000;
-  color: #999;
-  font: 100%/18px helvetica, arial, sans-serif;
-}
-
-canvas {
-  cursor: crosshair;
-  display: block;
-  left: 0;
-  position: absolute;
-  top: 0;
-  z-index: 20;
-}
-
-#header img {
-  width: 100%;
-  height: 20%;
-}
-
-#bg img {
-  width: 100%;
-  height: 80%;
-}
-
-#header, #bg {
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: 10;
-}
-
-#header {
-  top: 0;
-}
-
-#bg {
-  position: fixed;
-  z-index: 1;
-  bottom: 0;
-}
-
-audio {
-  position: fixed;
-  display: none;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  z-index: 5;
-}
-
-/* Media query for screens with a maximum width of 768px */
-@media only screen and (max-width: 768px) {
-  body {
-      font-size: 16px; /* Adjust the font size for smaller screens */
-  }
-  .red-text {
-    font-family: Pacifico;
-    color: red;
-    font-size: 100px;
-  }
   
-}
+</script>
+</head>
+<body>
+    <div class="container-fluid">
+        <h1 class="red-text text-center">Happy Diwali</h1>
+        <h2 class="text-center margin-left">-By Kamal Chandra</h2>
+      <center><span>click on screen</span>  </center>
+    </div> 
 
-/* Media query for screens with a minimum width of 1200px */
-/* @media only screen and (min-width: 1200px) { */
-  h2 {
-      margin-left: 10px; /* Adjust the margin for larger screens */
-  }
+<footer class="footer footer-inverse" style=" margin-bottom: 0;">
+      <div class="container">
+        <!-- Start of SimpleHitCounter Code -->
+        
+        <!-- End of SimpleHitCounter Code -->        
+      </div>
+</footer>
+</body></html>
+<!-- partial -->
+  <script src='https://code.jquery.com/jquery-2.1.0.min.js'></script><script  src="./script.js"></script>
 
-/* } */
-
+</body>
+</html>
